--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.1.1",
+    "rc": "^1.2.8",
     "react": "^16.13.1",
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-js-banner": "^0.4.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
+    "react-slideshow-image": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
