--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.0.5",
+    "@material-ui/core": "^4.9.9",
+    "@opuscapita/react-searchbar": "^2.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.1.1",
+    "node-gyp": "^6.1.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-modal-login": "^1.4.5",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
+    "react-search-box": "^2.0.2",
+    "react-search-field": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
