--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.0.5",
+    "@appbaseio/reactivesearch": "^3.7.9",
     "@material-ui/core": "^4.9.9",
     "@opuscapita/react-searchbar": "^2.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.1.1",
+    "evergreen-ui": "^4.25.0",
+    "material-ui-search-bar": "^1.0.0-beta.14",
     "node-gyp": "^6.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
