--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.1.1",
+    "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.13.1",
+    "react-input-mask": "^2.0.4",
     "react-scripts": "3.4.1"
   },
   "scripts": {
