--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "dependencies": {
     "@ant-design/icons": "^4.0.5",
     "@appbaseio/reactivesearch": "^3.7.9",
+    "@chakra-ui/core": "^0.7.0",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.9.9",
     "@opuscapita/react-searchbar": "^2.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.1.1",
+    "emotion-theming": "^10.0.27",
     "evergreen-ui": "^4.25.0",
     "material-ui-search-bar": "^1.0.0-beta.14",
     "node-gyp": "^6.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-awesome-stars-rating": "^0.2.5",
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.13.1",
     "react-modal-login": "^1.4.5",
