--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.1.1",
+    "axios": "^0.19.2",
     "emotion-theming": "^10.0.27",
     "evergreen-ui": "^4.25.0",
     "material-ui-search-bar": "^1.0.0-beta.14",
@@ -23,6 +24,7 @@
     "react-awesome-stars-rating": "^0.2.5",
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.13.1",
+    "react-input-mask": "^2.0.4",
     "react-modal-login": "^1.4.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
