--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "@chakra-ui/core": "^0.7.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
-    "@material-ui/core": "^4.9.9",
+    "@material-ui/core": "^4.9.10",
     "@opuscapita/react-searchbar": "^2.1.1",
+    "@react-firebase/auth": "^0.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -17,6 +18,7 @@
     "axios": "^0.19.2",
     "emotion-theming": "^10.0.27",
     "evergreen-ui": "^4.25.0",
+    "firebase": "^7.14.0",
     "material-ui-search-bar": "^1.0.0-beta.14",
     "node-gyp": "^6.1.0",
     "prop-types": "^15.7.2",
@@ -26,13 +28,16 @@
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.13.1",
     "react-input-mask": "^2.0.4",
+    "react-js-banner": "^0.4.0",
     "react-modal-login": "^1.4.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-search-box": "^2.0.2",
     "react-search-field": "^1.0.0",
-    "react-js-banner": "^0.4.0",
-    "react-slideshow-image": "^1.4.0"
+    "react-slideshow-image": "^1.4.0",
+    "react-with-firebase-auth": "^1.3.2",
+    "router": "^1.3.5",
+    "typeface-roboto": "0.0.75"
   },
   "scripts": {
     "start": "react-scripts start",
